--- a/src/DashboardBundle/Resources/views/Grid/gridTemplateMyContactsAjax.html.twig
+++ b/src/DashboardBundle/Resources/views/Grid/gridTemplateMyContactsAjax.html.twig
@@ -16,7 +16,7 @@ function {{ grid.hash }}_goto(url, data, type)
     type = type || 'GET';
     data = data || [];
 
-    $('#genericContainerTable').html('');
+    $('#genericContainerTable2').html('');
     $('.grid-loading2').css('display','block');
     
     $.ajax({
