--- a/src/DashboardBundle/Resources/views/Upgrade/index.html.twig
+++ b/src/DashboardBundle/Resources/views/Upgrade/index.html.twig
@@ -33,7 +33,7 @@
               </div>
               <div class="content" style="padding-top: 15px;padding-bottom: 15px;">
                 {% if plan.id != current_plan.plan.id %}
-                  <center>  <a class="btn"><i class="mdi mdi-editor-attach-money left"></i>BUY NOW</a> </center>
+                  <center>  <a class="btn" href="{{ path('upgrade_checkout', {'plan_id':plan.id}) }}"><i class="mdi mdi-editor-attach-money left"></i>BUY NOW</a> </center>
                 {% else %}
                   <center>  Your current Plan </center>
                 {% endif %}
@@ -43,31 +43,6 @@
         </div>
         {% endfor %}
       </div>
-
-      {% include 'DashboardBundle:Upgrade:Partials/_stripe_card_form.html.twig' %}
-
     </div>
   </div>
 {% endblock content %}
-
-{% block javascripts %}
-  {{ parent() }}
-  <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
-  <script src="{{ asset('bundles/dashboard/assets/js/stripe.js') }}"></script>
-
-  <script>
-    MyStripe.init({
-      form_selector: '#card-information-form'
-    });
-
-    MyStripe.success(function(token){
-      var data = {
-        token: token
-      };
-      $.post('{{ path('upgrade_update_card') }}', data, function(result){
-        console.log(result);
-      });
-    });
-  </script>
-
-{% endblock %}
