--- a/src/DashboardBundle/Resources/views/ContactList/edit.html.twig
+++ b/src/DashboardBundle/Resources/views/ContactList/edit.html.twig
@@ -10,77 +10,37 @@
 
 {% block content %}
   <style>
-    /*.collection .collection-item.avatar i.circle-avatar-status {*/
-      /*font-size: 18px;*/
-      /*line-height: 39px;*/
-      /*color: #fff;*/
-      /*text-align: center;*/
-    /*}*/
 
-    /*i.circle-avatar-status.red {*/
-      /*border: 3px solid pink;*/
-    /*}*/
+    .circle-status.red {
+      position: absolute;
+      width: 15px;
+      height: 15px;
+      overflow: hidden;
+      left: 190px;
+      display: inline-block;
+      vertical-align: middle;
+    }
 
-    /*i.circle-avatar-status.green {*/
-      /*border: 3px solid #94fc98;*/
-    /*}*/
+    .circle-status.green {
+      position: absolute;
+      width: 15px;
+      height: 15px;
+      overflow: hidden;
+      left: 15px;
+      display: inline-block;
+      vertical-align: middle;
+    }
 
-    /*.collection .collection-item.avatar i.circle-avatar-status > span {*/
-      /*font-size: 16px;*/
-      /*font-style: normal;*/
-    /*}*/
+    .arrow-switch-legent{
+      color: #424242;
+      font-size: 20px;
+      background-color: #F9F9F9;
+      border-radius: 4px;
+    }
 
-    /*.collection .collection-item.avatar {*/
-      /*min-height: 60px;*/
-    /*}*/
-
-    /*.circle-status.red {*/
-      /*position: absolute;*/
-      /*width: 15px;*/
-      /*height: 15px;*/
-      /*overflow: hidden;*/
-      /*left: 190px;*/
-      /*display: inline-block;*/
-      /*vertical-align: middle;*/
-    /*}*/
-
-    /*.circle-status.green {*/
-      /*position: absolute;*/
-      /*width: 15px;*/
-      /*height: 15px;*/
-      /*overflow: hidden;*/
-      /*left: 15px;*/
-      /*display: inline-block;*/
-      /*vertical-align: middle;*/
-    /*}*/
-
-    /*.arrow-switch{*/
-      /*color: #424242;*/
-      /*font-size: 30px;*/
-      /*background-color: #F9F9F9;*/
-      /*border-radius: 4px;*/
-    /*}*/
-
-    /*.secundary-content-center{*/
-       /*top: 20px !important;*/
-     /*}*/
-
-    /*.arrow-switch:hover{*/
-      /*background-color: #9E9E9E;*/
-    /*}*/
-
-    /*.primary-content{*/
-      /*position: absolute;*/
-      /*top: 20px !important;*/
-      /*left: 15px;*/
-    /*}*/
-    /*.circle-right{*/
-      /*left: 60px !important;*/
-    /*}*/
-
-    /*.avatar-right{*/
-      /*padding-left: 115px !important;*/
-    /*}*/
+    .arrow-switch-legent:hover{
+      background-color: #9E9E9E;
+    }
 
   </style>
   <div class="card card-data-grid">
@@ -96,9 +56,9 @@
     <div class="content">
 
       <form id="formSubmit" class="form-horizontal" action="" method="post" {{ form_enctype(form) }}>
-        <div class="row" style="padding-left: 20px;padding-right: 50%;margin-top: 1rem;">
-          <div class="row" style="margin-top: 0rem;">
-            <div class="col m12" style="padding-bottom: 15px;">
+        <div class="row" style="padding-left: 20px;padding-right: 3%;margin-top: 1rem;">
+          <div class="row" style="margin-top: 0rem;margin-left: -20px;">
+            <div class="col m6" style="padding-bottom: 15px;">
               <div class="input-field">
                 {{ form_widget(form.name) }}
                 <label for="property_lease_term" class="">Name</label>
@@ -109,33 +69,47 @@
         {{ form_rest(form) }}
       </form>
 
-      <div class="row">
-        <div class="col m6">
-          <span><b>All contacts</b></span>
-          {{ grid(grid, 'DashboardBundle:Grid:gridTemplateContactsAjax.html.twig') }}
-        </div>
-        <div class="col m6">
-          <span><b>Contacts of current list:</b></span>
-          {{ grid(grid2, 'DashboardBundle:Grid:gridTemplateMyContactsAjax.html.twig') }}
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col m2" style="padding-right: 0px">
-          <i class="green circle circle-status"> <span></span></i> <b style="margin-left: 30px;"> Enable contact</b>
-        </div>
-        <div class="col m2">
-          <i class="red circle circle-status"> <span></span></i> <b style="margin-left: 30px;"> Disable contact</b>
-        </div>
-        <div class="col m4">
-          <i class="mdi mdi-hardware-keyboard-arrow-right arrow-switch"></i>
-          <i class="mdi mdi-hardware-keyboard-arrow-left arrow-switch"></i>
-          asdasd
-        </div>
-      </div>
 
     </div>
   </div>
+
+<div class="card">
+  <div class="title">
+    <h5> Add contacts of current list</h5>
+    <div class="btn-group right">
+      <a id="save_action" class="btn btn-small waves-dark waves-effect"> <i class="mdi mdi-content-add left"></i>
+        Add contact</a>
+    </div>
+  </div>
+  <div class="content" style="padding-top: 5px">
+    <div class="row" style="margin-top: 5px;">
+      <div class="col m6">
+        <span style="font-size: 18px">All contacts:</span>
+        {{ grid(grid, 'DashboardBundle:Grid:gridTemplateContactsAjax.html.twig') }}
+      </div>
+      <div class="col m6">
+        <span style="font-size: 18px">Contacts of current list:</span>
+        {{ grid(grid2, 'DashboardBundle:Grid:gridTemplateMyContactsAjax.html.twig') }}
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col m2" style="padding-right: 0px">
+        <i class="green circle circle-status"> <span></span></i> <b style="margin-left: 30px;"> Enable contact</b>
+      </div>
+      <div class="col m2">
+        <i class="red circle circle-status"> <span></span></i> <b style="margin-left: 30px;"> Disable contact</b>
+      </div>
+      <div class="col m4">
+        <div style="margin-top: -6px;">
+          <i class="mdi mdi-hardware-keyboard-arrow-right arrow-switch-legent"></i>
+          <i class="mdi mdi-hardware-keyboard-arrow-left arrow-switch-legent"></i>
+          <b> Switch contact </b>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
   <script src="{{ asset('bundles/common/js/application.js') }}" type="text/javascript"></script>
   <script>
     $(document).ready(function () {
