--- a/src/UserBundle/Resources/views/Profile/Partials/_index-tab-payment-option.html.twig
+++ b/src/UserBundle/Resources/views/Profile/Partials/_index-tab-payment-option.html.twig
@@ -82,7 +82,7 @@
                 {{ invoice.lines.data.0.plan.name }}
               </td>
               <td>
-                $ {{ invoice.amount_due | number_format(2) }}
+                $ {{ (invoice.amount_due / 100) | number_format(2) }}
               </td>
               <td>
                 {{ invoice.date | date('M Y') }}
