--- a/src/DashboardBundle/Resources/views/Upgrade/Partials/_stripe_card_form.html.twig
+++ b/src/DashboardBundle/Resources/views/Upgrade/Partials/_stripe_card_form.html.twig
@@ -1,5 +1,5 @@
 <form id="stripe-card-form">
-    <span class="errors"></span>
+    <span class="payment-errors"></span>
 
     <div class="form-row">
         <label>
