--- a/src/UserBundle/Resources/views/Profile/Partials/_index-tab-payment-option.html.twig
+++ b/src/UserBundle/Resources/views/Profile/Partials/_index-tab-payment-option.html.twig
@@ -27,7 +27,7 @@
       <div class="col s9" style="padding-bottom: 10px;">
         <span>
           {% if card_info %}
-            xxxx-xxxx-xxxx-{{ card_info.last4 }}
+            XXXX-XXXX-XXXX-{{ card_info.last4 }}
           {% else %}
             No card
           {% endif %}
